--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,185 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+* {
+  padding: 0;
+  margin: 0;
+  color: var(--four);
+  box-sizing: border-box;
 }
 
-a {
-  color: #00B7FF;
+:root {
+  --one: #ff8c00;
+  --two: #f6f6f6;
+  --three: #333333;
+  --four: #ffffff;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--two);
+  background-image: url("../images/BG-water.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+main {
+  width: 70vw;
+  height: 90vh;
+  min-width: 500px;
+  padding: 5px;
+  z-index: 99;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+#container {
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: var(--four);
+  box-shadow: 0px 0px 50px 0px var(--three);
+  position: relative;
+}
+
+#container::after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 45vw;
+  height: 200vh;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  border-radius: 10px;
+  background-color: var(--one);
+  animation: move 1.5s linear infinite;
+}
+
+@keyframes move {
+  100% {
+    transform: translate(-50%, -50%) rotate(225deg);
+  }
+
+}
+
+header {
+  width: 50%;
+  margin: 0 auto;
+  color: var(--four);
+}
+
+#logo {
+  width: 100%;
+  object-fit: cover;
+  mix-blend-mode: multiply;
+}
+
+form {
+  width: 80%;
+  border-radius: 10px;
+  padding: 5px;
+  margin: 0 auto;
+}
+
+label {
+  color: var(--three);
+  font-size: 20px;
+
+}
+
+input {
+  color: var(--one);
+  display: block;
+  background-color: transparent;
+  border: none;
+  width: 100%;
+  height: 10%;
+  margin-bottom: 10px;
+  border-bottom: 5px solid var(--one);
+  font-size: 20px;
+  text-shadow: 1px 1px black;
+  padding: 2px;
+  border-radius: 5px;
+}
+
+select {
+  color: var(--one);
+  border: 2px solid var(--one);
+}
+
+option {
+  color: var(--one);
+}
+
+fieldset {
+  margin-top: 5px;
+  border: 5px solid var(--one);
+}
+
+legend {
+  color: var(--three);
+  text-indent: 10px;
+}
+
+textarea {
+  background-color: transparent;
+  border: none;
+  width: 100%;
+  color: var(--one);
+  text-shadow: 1px 1px black;
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {}
+
+/* animation for the button */
+input[type=submit] {
+  transform: scale(0.65);
+  margin: 10px auto;
+  width: 280px;
+  height: 80px;
+  font-size: 25px;
+  font-weight: bold;
+  font-family: "Open Sans";
+  text-transform: uppercase;
+  color: var(--one);
+  background: url(https://i.imgur.com/Th606mh.png) no-repeat scroll 0.75em -0.32em transparent;
+  background-size: 54px 204px;
+  border-radius: 2em;
+  border: 0.15em solid var(--one);
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+
+input[type="submit"]:hover {
+  color: #fff;
+  background-color: var(--one);
+  border-color: var(--one);
+  background-position: 0.50em bottom;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+input[type="submit"]:focus {
+  background-position: 1px 1px;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+/* Webfonts */
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: bolder;
+  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(https://themes.googleusercontent.com/static/fonts/opensans/v8/k3k702ZOKiLJc3WVjuplzHhCUOGz7vYGh680lGh-uXM.woff) format('woff');
 }
