--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,17 +6,17 @@
 }
 
 :root {
-  --one: #ff8c00;
-  --two: #f6f6f6;
-  --three: #333333;
-  --four: #ffffff;
+  --one: #ffffff;
+  --two: #141414;
+  --three: #ffffff;
+  --four: #000000;
 }
 
 body {
+  font-family: 'Roboto', sans-serif;
   width: 100vw;
   height: 100vh;
   background-color: var(--two);
-  background-image: url("../images/BG-water.webp");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -39,7 +39,6 @@ main {
   padding: 10px;
   border-radius: 10px;
   background-color: var(--four);
-  box-shadow: 0px 0px 50px 0px var(--three);
   position: relative;
 }
 
@@ -73,7 +72,6 @@ header {
 #logo {
   width: 100%;
   object-fit: cover;
-  mix-blend-mode: multiply;
 }
 
 form {
@@ -105,12 +103,12 @@ input {
 }
 
 select {
-  color: var(--one);
+  color: var(--four);
   border: 2px solid var(--one);
 }
 
 option {
-  color: var(--one);
+  color: var(--four);
 }
 
 fieldset {
@@ -158,7 +156,7 @@ input[type=submit] {
 }
 
 input[type="submit"]:hover {
-  color: #fff;
+  color: var(--four);
   background-color: var(--one);
   border-color: var(--one);
   background-position: 0.50em bottom;
