--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 <body>
   <main>
     <div id="container">
-      <header><img src="../images/WhatsApp Image 2024-05-09 at 17.51.43_5613dd4a.jpg" alt="imh" id="logo"></header>
+      <header><img src="../images/logo.png" alt="imh" id="logo"></header>
 
       <form id="form-data" method="POST" action="/sendData">
         <label for="user-name">NAME :</label>
